fix(code-quality): resolve SonarCloud findings
Java fixes:
- TransactionController: use .toList() instead of .collect()
- RateLimitFilter: simplify IP validation regex patterns
- CoretaxExportService: remove unused createDateStyle method
- PayrollService: add log.isInfoEnabled() guard

Template fixes:
- main.html: add aria-label attributes for accessibility
- about.html: use const and dataset API
- tax-profile/index.html: use fieldset/legend for radio group

Test fixes:
- ZapDastTest: move comment outside array literal

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>